--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
+    "apollo-server-micro": "^3.4.0",
+    "axios": "^0.24.0",
+    "graphql": "^15.6.1",
+    "micro": "^9.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
